--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -1,8 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE web-app PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN" 
-   "http://java.sun.com/dtd/web-app_2_3.dtd">   
-
+"http://java.sun.com/dtd/web-app_2_3.dtd">   
+<!--
+<web-app id="WebApp_9" version="2.4" xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
+    -->
+<web-app version="3.0" 
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+    xmlns="http://java.sun.com/xml/ns/javaee" 
+    xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
+    http://java.sun.com/xml/ns/javaee/web-app_3.0.xsd" 
+    id="WebApp_ID" > 
+<!--
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+-->
 
     <display-name>FlieAdmin Project</display-name>
 
@@ -34,10 +45,12 @@
    <error-code>403</error-code>  
    <location>/error/forbidden.jsp</location>
 </error-page>   
+<!--
 <error-page>
    <error-code>java.lang.NullPointerException</error-code>  
    <location>/error/null.jsp</location>
 </error-page>
+-->
 <init-param>
    <param-name>listings</param-name>
    <param-value>true</param-value>
