repace swfupload to xhr upload

--- a/WEB-INF/classes/fileadmin.properties
+++ b/WEB-INF/classes/fileadmin.properties
@@ -8,28 +8,29 @@
 # \u591a\u7528\u6237
 # Maximum of 10 users
 # admin user 1
-fileadmin.admin1.username = utftp
+#fileadmin.admin1.username = utftp
 # this password is admin
 # printf ut|md5sum or echo -n ut | md5sum get MD5
-fileadmin.admin1.password = b1a5d251fa4fe598cb947ffc42b9cbed
-fileadmin.utftp.root.path = /home/work/www/
+#fileadmin.admin1.password = b1a5d251fa4fe598cb947ffc42b9cbed
+#fileadmin.utftp.root.path = /home/work/www/
 # the utftp is admin1.username
 
 # admin user 2
-fileadmin.admin2.username = work
-# this password is 123456
-fileadmin.admin2.password = e10adc3949ba59abbe56e057f20f883e
-fileadmin.work.root.path = e:/ut/tmp/
+fileadmin.admin2.username = share
+# this password is share123@Lego
+fileadmin.admin2.password = 254cfab3490667e78f8d5ba2a1f72201
+fileadmin.share.root.path = /home/work/
+#fileadmin.share.root.path = /data/
 
 # admin user 3
 fileadmin.admin3.username = admin
-# this password is admin@ut
-fileadmin.admin3.password = 313a06b3b09361a8ad5e571279e8156d
-fileadmin.admin.root.path = /home/
+# this password is admin123@Lego
+fileadmin.admin3.password = 6116c3d62e9908986bc1a449fa5d14cd
+fileadmin.admin.root.path = /Users/jarry/tmp/
 
 # admin user 4
-fileadmin.admin4.username = test
+#fileadmin.admin4.username = test
 # this password is test
-fileadmin.admin4.password = 098f6bcd4621d373cade4e832627b4f6
-fileadmin.test.root.path = /home/work/test/
+#fileadmin.admin4.password = 098f6bcd4621d373cade4e832627b4f6
+#fileadmin.test.root.path = /home/work/test/
 
